{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 23,
  "lineage": "41037405-1c91-7547-423e-d633853e3286",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic-IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aaf39b511262ee21",
            "arn": "arn:aws:ec2:us-east-1:879381254379:elastic-ip/eipalloc-0aaf39b511262ee21",
            "association_id": "eipassoc-09e75e56c53e89094",
            "domain": "vpc",
            "id": "eipalloc-0aaf39b511262ee21",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e773b669e0eeaa0b",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-54-152-86-174.compute-1.amazonaws.com",
            "public_ip": "54.152.86.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Duy Anh",
              "Name": "my-EIP",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "my-EIP",
              "Project": "Create VPC"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myWeb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0655cec52acf2717b",
            "arn": "arn:aws:ec2:us-east-1:879381254379:instance/i-0b7c52852ebd0c830",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7c52852ebd0c830",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09945d4cf4c2bf3fa",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "public_ip": "44.195.46.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09124e7be2a18a0aa",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0116ff475ee4ee5dc",
            "tags": {
              "Name": "myWeb"
            },
            "tags_all": {
              "Name": "myWeb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0773fa7fa7957d00c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.public-subnet-01",
            "aws_vpc.main",
            "data.aws_ami.ubuntu22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:internet-gateway/igw-087e5e14a7f7977a3",
            "id": "igw-087e5e14a7f7977a3",
            "owner_id": "879381254379",
            "tags": {
              "Author": "Duy Anh",
              "Name": "myIGW",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "myIGW",
              "Project": "Create VPC"
            },
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aaf39b511262ee21",
            "association_id": "eipassoc-09e75e56c53e89094",
            "connectivity_type": "public",
            "id": "nat-0b13d8a6cd672fff2",
            "network_interface_id": "eni-0e773b669e0eeaa0b",
            "private_ip": "10.0.1.164",
            "public_ip": "54.152.86.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0116ff475ee4ee5dc",
            "tags": {
              "Author": "Duy Anh",
              "Name": "my-NAT-GW",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "my-NAT-GW",
              "Project": "Create VPC"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-IP",
            "aws_internet_gateway.igw",
            "aws_subnet.public-subnet-01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-Route-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:route-table/rtb-09d35c527c4b6a020",
            "id": "rtb-09d35c527c4b6a020",
            "owner_id": "879381254379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b13d8a6cd672fff2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Duy Anh",
              "Name": "my-Private-Route-Table",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "my-Private-Route-Table",
              "Project": "Create VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Elastic-IP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT-GW",
            "aws_subnet.public-subnet-01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Route-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:route-table/rtb-0bd960c35c3a68a61",
            "id": "rtb-0bd960c35c3a68a61",
            "owner_id": "879381254379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087e5e14a7f7977a3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Duy Anh",
              "Name": "my-Public-Route-Table",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "my-Public-Route-Table",
              "Project": "Create VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-RT01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9748a5448675a7b",
            "route_table_id": "rtb-09d35c527c4b6a020",
            "subnet_id": "subnet-01aad857d57bbc65f"
          },
          "dependencies": [
            "aws_eip.Elastic-IP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT-GW",
            "aws_route_table.Private-Route-Table",
            "aws_subnet.private-subnet-01",
            "aws_subnet.public-subnet-01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-RT02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0592ce92ebe68af2d",
            "route_table_id": "rtb-09d35c527c4b6a020",
            "subnet_id": "subnet-07306cc0e998f0455"
          },
          "dependencies": [
            "aws_eip.Elastic-IP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT-GW",
            "aws_route_table.Private-Route-Table",
            "aws_subnet.private-subnet-02",
            "aws_subnet.public-subnet-01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-RT01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d728f266ff16ea2b",
            "route_table_id": "rtb-0bd960c35c3a68a61",
            "subnet_id": "subnet-0116ff475ee4ee5dc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public-Route-Table",
            "aws_subnet.public-subnet-01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-RT02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6038dba07b61e6c",
            "route_table_id": "rtb-0bd960c35c3a68a61",
            "subnet_id": "subnet-0683668db114cfb90"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public-Route-Table",
            "aws_subnet.public-subnet-02",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:security-group/sg-0773fa7fa7957d00c",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0773fa7fa7957d00c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "879381254379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:subnet/subnet-01aad857d57bbc65f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aad857d57bbc65f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381254379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Duy Anh",
              "Name": "private-subnet-01",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "private-subnet-01",
              "Project": "Create VPC"
            },
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:subnet/subnet-07306cc0e998f0455",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07306cc0e998f0455",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381254379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Duy Anh",
              "Name": "private-subnet-02",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "private-subnet-02",
              "Project": "Create VPC"
            },
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:subnet/subnet-0116ff475ee4ee5dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0116ff475ee4ee5dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879381254379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Duy Anh",
              "Name": "public-subnet-01",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "public-subnet-01",
              "Project": "Create VPC"
            },
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:subnet/subnet-0683668db114cfb90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0683668db114cfb90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879381254379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Duy Anh",
              "Name": "public-subnet-02",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "public-subnet-02",
              "Project": "Create VPC"
            },
            "vpc_id": "vpc-0f8a06335bd1b503f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:vpc/vpc-0f8a06335bd1b503f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0040c6b3ea1c3e0f2",
            "default_route_table_id": "rtb-0a48b3b0bbb9a1fb7",
            "default_security_group_id": "sg-05294eca50e1e8985",
            "dhcp_options_id": "dopt-0cf46d2e8bc275393",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8a06335bd1b503f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a48b3b0bbb9a1fb7",
            "owner_id": "879381254379",
            "tags": {
              "Author": "Duy Anh",
              "Name": "myVPC",
              "Project": "Create VPC"
            },
            "tags_all": {
              "Author": "Duy Anh",
              "Name": "myVPC",
              "Project": "Create VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:security-group-rule/sgr-0ee868c335aa7531d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ee868c335aa7531d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0773fa7fa7957d00c",
            "security_group_rule_id": "sgr-0ee868c335aa7531d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:security-group-rule/sgr-0ed429b855985ba88",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ed429b855985ba88",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0773fa7fa7957d00c",
            "security_group_rule_id": "sgr-0ed429b855985ba88",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:security-group-rule/sgr-0c3baf33d04ea3276",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c3baf33d04ea3276",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0773fa7fa7957d00c",
            "security_group_rule_id": "sgr-0c3baf33d04ea3276",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381254379:security-group-rule/sgr-03e49aa4284300aa5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03e49aa4284300aa5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0773fa7fa7957d00c",
            "security_group_rule_id": "sgr-03e49aa4284300aa5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}